tests/ui/associated-type-bounds/bad-universal-in-dyn-in-where-clause.stderr
error: associated type bounds are only allowed in where clauses and function signatures, not in bound
  --> $DIR/bad-universal-in-dyn-in-where-clause.rs:9:19
   |
LL |     dyn for<'j> B<AssocType: 'j>:,
   |                   ^^^^^^^^^^^^^

error[E0191]: the value of the associated type `AssocType` (from trait `B`) must be specified
  --> $DIR/bad-universal-in-dyn-in-where-clause.rs:9:9
   |
LL |     type AssocType;
   |     -------------- `AssocType` defined here
...
LL |     dyn for<'j> B<AssocType: 'j>:,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ help: specify the associated type: `for<'j> B<AssocType: 'j, AssocType = Type>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0191`.
